# trump-truth-social-feed

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  RESEARCH_FINDINGS.md  config.py  diff.py  ingest.py  pyproject.toml  requirements.txt  run_pipeline.py  settings.toml  ttsfeed.toml
.github/workflows/: daily_ingest.yml
data/enriched/: 2026-02-21.json  2026-02-22.json  2026-02-24.json  2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-02-28.json  2026-03-01.json  2026-03-08.json
data/output/: 2026-02-18.json
data/raw/: 2026-02-21.json  2026-02-22.json  2026-02-23.json  2026-02-24.json  2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-02-28.json  2026-03-01.json  2026-03-08.json
docs/: ARCHITECTURE.md  architecture.md  eda.ipynb  email-dispatch-design.md  taxonomy.md
scripts/: sync_github_env.sh
tests/: conftest.py  test_analyze.py  test_config.py  test_diff.py  test_export.py  test_fetch.py  test_filter.py  test_ingest.py  test_llm.py  test_notify.py  test_pipeline.py
ttsenrich/: analyze.py  config.py  export.py  fetch.py  llm.py  notify.py  pipeline.py
ttsfeed/: analyze.py  config.py  diff.py  export.py  fetch.py  filter.py  ingest.py  llm.py  notify.py  pipeline.py
ttsfeed/templates/: digest.html.jinja2  digest.txt.jinja2
