[project]
name = "trump-truth-social-feed"
version = "0.1.0"
description = "Truth Social feed ingestion pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
ttsfeed = "ttsfeed.pipeline:main"
